[package]
name = "MultiSigil"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
repository = "https://github.com/paritytech/substrate-multisig-cli.git"
homepage = "https://substrate.dev"
license = "GPL-3.0-or-later"
description = "CLI for generating Substrate multisig addresses"

[dependencies]
sp-runtime = "2.0.0-alpha.8"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-io = "2.0.0-alpha.8"
sp-core = "2.0.0-alpha.8"
clap = "3.0.0-beta.1"
